# rusty-duck

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
database/: all_emoji.json.example  duck.json.example  quacks.json
src/: main.rs
src/duck/: datatypes.rs  duck.rs  mod.rs  utils.rs
src/duck/multi_ducks/: interduck.rs  mod.rs  robo_mallard.rs  rubber_duck.rs
src/duck/triggers/: academic_integrity.rs  code.rs  echo.rs  generic.rs  lmgtfy.rs  man.rs  mod.rs  quack.rs  template.rs  tex.rs
src/duck/triggers/emoji_only/: commands.rs  mod.rs  utils.rs
src/duck/triggers/generic/: auto_react.rs  mod.rs  quack.rs
tools/: gen_emoji_list.py
