[package]
name = "rusty-duck"
version = "0.1.0"
authors = ["Benjamin Sherman <benjamin@bensherman.io>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
serenity = "0.6.2"
reqwest = "0.9.18"

serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"

getrandom = "0.1.3"
regex = "1"
